Added welcome banner and image

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,1 +1,6 @@
-home.html.erb
+<div>
+  <h1 align="center">Welcome to Your Vehicle Registry!</h1>
+  <div style='width: 600px;margin:auto'>
+    <img  style='width: 600px' src="https://i.imgur.com/FLCRoMA.jpg">
+  </div>
+</div>
