Added sign up and login links to home page; added session routes

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -4,3 +4,5 @@
     <img  style='width: 600px' src="https://i.imgur.com/FLCRoMA.jpg">
   </div>
 </div>
+
+<%= link_to "Sign Up", new_car_path %> | <%= link_to "Login", session_path %>
