--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -5,4 +5,4 @@
   </div>
 </div>
 
-<%= link_to "Sign Up", new_car_path %> | <%= link_to "Login", session_path %>
+<%= link_to "Sign Up", new_user_path %> | <%= link_to "Login", session_path %>
