Added delete link

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,4 +2,4 @@
 
 <p>Number of Registered Cars: <%= @user.cars.count %></p>
 
-<%= link_to "All Registered Cars", cars_path %> | <%= link_to "New Car", new_car_path %>
+<%= link_to "All Registered Cars", cars_path %> | <%= link_to "New Car", new_car_path %> | <%= link_to "Delete Car", delete_car_path %>
