Added style to the cars collection

--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,3 +1,20 @@
+<style>
+  table {
+      font-family: times, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+  }
+
+  td, th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+  }
+
+</style>
+
+<h1>All Cars</h1>
+
 <table>
   <thead>
     <tr>
