Testing the form_tag form

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,17 @@
-<h1>Sign Up</h1>
+<h1>New User</h1>
 
 <%= form_for @user do |f| %>
-  <strong>Name:</strong>
-  <%= f.text_field :name %><br></br>
+  <strong>Full Name:</strong>
+  <%= f.text_field :name %>
+  <br></br>
 
   <strong>Email:</strong>
-  <%= f.text_field :email %><br></br>
+  <%= f.text_field :email %>
+  <br></br>
 
   <strong>Password:</strong>
-  <%= f.password_field :password %><br></br>
+  <%= f.password_field :password %>
+  <br></br>
 
   <%= f.submit %>
 <% end %>
