--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,57 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsFinalProject</title>
+    <title>Rails Final Project</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <style>
+
+      body {
+        background-color: lightyellow;
+      }
+    </style>
   </head>
 
   <body>
-    <%= yield %>
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+
+        <% if !logged_in? %>
+          <%= link_to "Sign Up", new_user_path %>
+          <%= link_to "Log In", session_path, class:"navbar-brand" %>
+        <% end %>
+
+        <% if logged_in? %>
+          <%= link_to "#{current_user.name}'s Profile", user_path(current_user), class:"navbar-brand" %>
+          <%= link_to "Cars", cars_path, class:"navbar-brand" %>
+          <%= link_to "Log Out", session_path, class:"navbar-brand", method:'delete' %>
+        <% end %>
+      </div>
+
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+    <!-- content -->
+    <div class="container"  role="main">
+      <%= yield %>
+    </div>
   </body>
 </html>
