Added errors explanation

--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,5 +1,19 @@
 <h1>Register Your Vehicle</h1>
 
+  <% if @car.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@car.errors.count, "error") %>
+      prohibited this car from being saved: </h2>
+
+      <ul>
+        <% @car.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
 <%= form_tag('/cars', method: "post") do %>
   <strong><%= label_tag :make, "Make:" %></strong>
   <%= text_field_tag :make, @car.make %><br></br>
