--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,8 @@
         <% end %>
 
         <% if logged_in? %>
-          <%= link_to "#{current_user.name}'s Profile", user_path(current_user), class:"navbar-brand" %>
-          <%= link_to "Cars", cars_path, class:"navbar-brand" %>
+          <%= link_to "#{current_user.name}'s Profile", user_path(current_user), class:"navbar-brand" %> |
+          <%= link_to "Cars", cars_path, class:"navbar-brand" %> |
           <%= link_to "Log Out", session_path, class:"navbar-brand", method:'delete' %>
         <% end %>
       </div>
