--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,15 @@
 <h1>New User</h1>
 
 <%= form_for @user do |f| %>
-  <strong>Full Name:</strong>
+  <%= f.label :name, "Full Name:" %>
   <%= f.text_field :name %>
   <br></br>
 
-  <strong>Email:</strong>
+  <%= f.label :email, "Email:" %>
   <%= f.text_field :email %>
   <br></br>
 
-  <strong>Password:</strong>
+  <%= f.label :password, "Password:" %>
   <%= f.password_field :password %>
   <br></br>
 
