Added new code to list current user's cars

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,4 +2,18 @@
 
 <p>Number of Registered Cars: <%= @user.cars.count %></p>
 
+  <% if current_user.cars.empty? %>
+    <center><h4>No listings available</h4></center>
+  <% else %>
+    <p>Please click the link that you would like to edit or delete.</p>
+  <% end %>
+
+  <ul>
+    <% current_user.cars.each do |car| %>
+      <li>
+        <%= car.make %> <%= car.model %> (<%= car.year %>)
+      </li><br>
+    <% end %>
+  </ul>
+
 <%= link_to "All Registered Cars", cars_path %> | <%= link_to "New Car", new_car_path %> 
