--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
   <ul>
     <% current_user.cars.each do |car| %>
       <li>
-        <%= car.make %> <%= car.model %> (<%= car.year %>)
+        <%= link_to car.your_car, car_path(car) %>
       </li><br>
     <% end %>
   </ul>
