--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome, <%= @user.name %>!</h1>
+<h1>Welcome, <%= @user.first_name %>!</h1>
 
 <p>Number of Registered Cars: <%= @user.cars.count %></p>
 
