Added new columns to the collections chart

--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -37,7 +37,7 @@
         <td><%= car.year %></td>
         <td><%= car.color %></td>
         <td><%= car.size %></td>
-        <td><%= car.parking_space.space_number %></td>
+        <td><%= car.parking_space&.space_number %></td>
       </tr>
     <% end %>
   </tbody>
