--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -33,7 +33,7 @@
     <%= fields_for :parking_space_attributes do |ps| %>
 
       <%= ps.label :space_number, "Parking Space Number:" %>
-      <%= ps.number_field :space_number %>
+      <%= ps.select :space_number, options_for_select((100..125).step(1).to_a.map{|space| ["#{space}", space]}), include_blank: true %>
 
     <% end %>
     <br></br>
