--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,32 +13,26 @@
       body {
         background-color: lightyellow;
       }
+
     </style>
   </head>
 
   <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+    <ul>
+      <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
 
         <% if !logged_in? %>
-          <%= link_to "Sign Up", new_user_path %> | <%= link_to "Log In", session_path %> | <%= link_to('Log in with Google!', '/auth/google_oauth2') %>
+          <%= link_to "Sign Up", new_user_path %>
+          <%= link_to "Log In", session_path %>
+          <%= link_to('Log in with Google!', '/auth/google_oauth2') %>
         <% end %>
 
         <% if logged_in? %>
-          <%= link_to "#{current_user.name}'s Profile", user_path(current_user), class:"navbar-brand" %> |
-          <%= link_to "Cars", cars_path, class:"navbar-brand" %> |
+          <%= link_to "#{current_user.name}'s Profile", user_path(current_user), class:"navbar-brand" %>
+          <%= link_to "Cars", cars_path, class:"navbar-brand" %>
           <%= link_to "Log Out", session_path, class:"navbar-brand", method:'delete' %>
         <% end %>
-      </div>
+      </ul>
 
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
