--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -6,8 +6,8 @@
 </div>
 
 <% if session[:user_id] %>
-  <h1>Name: <%= @user.name %></h1>
-  <h2>Email: <%= @user.email %></h2>
-  <h2>Google UID: <%= @user.uid %></h2>
-  <img src="<%= @user.image %>">
+  <h1>Name: <%= current_user.name %></h1>
+  <h2>Email: <%= current_user.email %></h2>
+  <h2>Google UID: <%= current_user.uid %></h2>
+  <img src="<%= current_user.image %>">
 <% end %>
