Created new partial form for cars

--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -15,20 +15,8 @@
   <% end %>
 
   <%= form_tag('/cars', method: "post") do %>
-    <%= label_tag :make, "Make:" %>
-    <%= text_field_tag :make, @car.make %><br></br>
-
-    <%= label_tag :model, "Model:" %>
-    <%= text_field_tag :model, @car.model %><br></br>
-
-    <%= label_tag :year, "Year:" %>
-    <%= number_field_tag :year, @car.year %><br></br>
-
-    <%= label_tag :color, "Color:" %>
-    <%= text_field_tag :color, @car.color %><br></br>
-
-    <%= label_tag :size, "Size:" %>
-    <%= text_field_tag :size, @car.size %><br></br>
+    
+    <%= render 'form' %>
 
       <%= fields_for :parking_space_attributes do |ps| %>
 
@@ -36,6 +24,7 @@
         <%= ps.select :space_number, options_for_select((100..125).step(1).to_a.map{|space| ["#{space}", space]}), include_blank: true %>
 
       <% end %>
+      
     <br></br>
 
   <%= submit_tag "Create Car" %>
