--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -18,10 +18,10 @@
     
     <%= render 'form' %>
 
-      <%= fields_for :parking_space_attributes do |ps| %>
+    <%= fields_for :parking_space_attributes do |ps| %>
 
-        <%= ps.label :space_number, "Parking Space Number:" %>
-        <%= ps.select :space_number, options_for_select((100..125).step(1).to_a.map{|space| ["#{space}", space]}), include_blank: true %>
+       <strong><%= ps.label :space_number, "Parking Space Number:" %></strong>
+        <%= ps.select :space_number, options_for_select((100..125).step(1).to_a.map{|space| ["#{space}", space]}), include_blank: true, prompt: "Please choose your parking space number" %>
 
       <% end %>
       
