Modification to include nested associations

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
   <ul>
     <% current_user.cars.each do |car| %>
       <li>
-        <%= link_to car.your_car, car_path(car) %>
+        <%= link_to car.your_car, user_car_path(current_user, car) %>
       </li><br>
     <% end %>
   </ul>
