Modification of the cars show page

--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,5 +1,12 @@
 <h2>Would you like to edit or delete this entry?</h2>
 
-<h4><%= @car.your_car %></h4><br></br>
+<p><strong>Car:</strong> <%= @car.your_car %></p>
+
+<p><strong>Color:</strong> <%= @car.color %></p>
+
+<p><strong>Size:</strong> <%= @car.size %></p>
+
+<p><strong>Parking Space Number:</strong> <%= @car.parking_space.space_number %></p>
+
 
 <%= link_to "Edit Car", edit_car_path(@car) %> | <%= link_to "Delete Car", @car, :method => :delete %>
