Added new entry for admin

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,6 +13,10 @@
   <%= f.password_field :password %>
   <br></br>
 
+  <%= f.label :admin, "Check box if you are an administrator:" %>
+  <%= f.check_box :admin %>
+  <br></br>
+
   <%= f.submit %>
 <% end %>
 
