--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -20,8 +20,9 @@
 
     <%= fields_for :parking_space_attributes do |ps| %>
 
-       <strong><%= ps.label :space_number, "Parking Space Number:" %></strong>
-        <%= ps.select :space_number, options_for_select((100..125).step(1).to_a.map{|space| ["#{space}", space]}), include_blank: true, prompt: "Please choose your parking space number" %>
+      <strong><%= ps.label :space_number, "Parking Space Number:" %></strong>
+
+        <%= ps.select :space_number, options_for_select((100..125).step(1).to_a.map{|space| ["#{space}", space]}), prompt: "Please choose your parking space number" %>
 
       <% end %>
       
