--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,21 +1,30 @@
 <h1>New User</h1>
 
 <%= form_for @user do |f| %>
-  <%= f.label :name, "Full Name:" %>
-  <%= f.text_field :name %>
-  <br></br>
 
-  <%= f.label :email, "Email:" %>
-  <%= f.text_field :email %>
-  <br></br>
+  <div class="form-group">
+    <strong><%= f.label :name, "Full Name:" %></strong>
+    <%= f.text_field :name %>
+    <br></br>
+  </div>
 
-  <%= f.label :password, "Password:" %>
-  <%= f.password_field :password %>
-  <br></br>
+  <div class="form-group">
+    <strong><%= f.label :email, "Email:" %></strong>
+    <%= f.text_field :email %>
+    <br></br>
+  </div>
 
-  <%= f.label :admin, "Check box if you are an administrator:" %>
-  <%= f.check_box :admin %>
-  <br></br>
+  <div class="form-group">
+    <strong><%= f.label :password, "Password:" %></strong>
+    <%= f.password_field :password %>
+    <br></br>
+  </div>
+
+  <div class="checkbox">
+    <strong><%= f.label :admin, "Check box if you are an administrator:" %></strong>
+    <%= f.check_box :admin %>
+    <br></br>
+  </div>
 
   <%= f.submit %>
 <% end %>
