--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,19 +24,18 @@
 
   <body>
     <ul>
-      <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+      <a class="navbar-brand" href="<%= root_url %>"/>Home</a> |          
 
         <% if !logged_in? %>
-          <%= link_to "Sign Up", new_user_path %>
-          <%= link_to "Log In", session_path %>
+          <%= link_to "Sign Up", new_user_path %> |
+          <%= link_to "Log In", session_path %> |  
           <%= link_to('Log in with Google!', '/auth/google_oauth2') %>
         <% end %>
 
         <% if logged_in? %>
-          <%= link_to "#{current_user.name}'s Profile", user_path(current_user), class:"navbar-brand" %>
-          <%= link_to "Cars", cars_path, class:"navbar-brand" %>
+          <%= link_to "#{current_user.name}'s Profile", user_path(current_user), class:"navbar-brand" %> |          
+          <%= link_to "Cars", cars_path, class:"navbar-brand" %> |          
           <%= link_to "Log Out", session_path, class:"navbar-brand", method:'delete' %>
-          
         <% end %>
       </ul>
 
