--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,32 +4,32 @@
   <%= link_to "All Registered Cars", cars_path %>
 <% else %>
 
-<% if current_user.cars.empty? %>
+  <% if current_user.cars.empty? %>
     <center><h4>No listings available</h4></center>
   <% else %>
     <p>Please click the link that you would like to edit or delete.</p>
   <% end %>
 
-<p>Number of Registered Cars: <%= @user.cars.count %></p>
+  <p>Number of Registered Cars: <%= @user.cars.count %></p>
 
-  <ul>
-    <% current_user.cars.each do |car| %>
-      <li>
-        <%= link_to car.your_car, user_car_path(current_user, car) %>
-      </li><br>
-    <% end %>
-  </ul>
+    <ul>
+      <% current_user.cars.each do |car| %>
+        <li>
+          <%= link_to car.your_car, user_car_path(current_user, car) %>
+        </li><br>
+      <% end %>
+    </ul>
 
-<p>Number of Parking Spaces: <%= @user.parking_spaces.count %>
+  <p>Number of Parking Spaces: <%= @user.parking_spaces.count %>
 
-  <ul>
-    <% current_user.parking_spaces.each do |ps| %>
-      <li>
-        <%= ps.space_number %>
-      </li>
-    <% end %>
-  </ul>
+    <ul>
+      <% current_user.parking_spaces.each do |ps| %>
+        <li>
+          <%= ps.space_number %>
+        </li>
+      <% end %>
+    </ul>
 
-<%= link_to "All Registered Cars", cars_path %> | <%= link_to "New Car", new_car_path %> 
+  <%= link_to "All Registered Cars", cars_path %> | <%= link_to "New Car", new_user_car_path(@user) %>
 
 <% end %>
