--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
         <% if !logged_in? %>
           <%= link_to "Sign Up", new_user_path %> |
-          <%= link_to "Log In", session_path %> |  
+          <%= link_to "Log In", login_path %> |  
           <%= link_to('Log in with Google!', '/auth/google_oauth2') %>
         <% end %>
 
